# uv

./: CLAUDE.md  Cargo.toml
crates/uv/: Cargo.toml
crates/uv-cli/src/: lib.rs
crates/uv-gui/: Cargo.toml  TODO.txt
crates/uv-gui/src/: actions.rs  app.rs  lib.rs  main.rs
crates/uv-gui/src/components/: button.rs  dependency_list.rs  mod.rs  package_card.rs  search_bar.rs  status_bar.rs
crates/uv-gui/src/loaders/: dependency_loader.rs  lockfile_loader.rs  mod.rs  project_loader.rs  pypi_loader.rs
crates/uv-gui/src/state/: app_state.rs  mod.rs  project_state.rs
crates/uv-gui/src/views/: environments.rs  main_window.rs  mod.rs  packages.rs  project.rs  python.rs  settings.rs
crates/uv-gui/tests/: integration.rs  state_tests.rs
crates/uv/src/: lib.rs  settings.rs
crates/uv/src/commands/: gui.rs  mod.rs
crates/uv/src/commands/pip/: download.rs  mod.rs  wheel.rs
crates/uv/tests/it/: main.rs  pip_download.rs  pip_wheel.rs
crates/uv/tests/it/common/: mod.rs
docs/guides/: gui.md
docs/pip/: packages.md
