[package]
name = "uv-gui"
version = "0.0.7"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
description = "A graphical user interface for uv, the Python package manager"

[[bin]]
name = "uv-gui"
path = "src/main.rs"

[lib]
name = "uv_gui"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
# Core uv dependencies
uv-cache = { workspace = true }
uv-cli = { workspace = true }
uv-client = { workspace = true }
uv-configuration = { workspace = true }
uv-normalize = { workspace = true }
uv-pep440 = { workspace = true }
uv-pep508 = { workspace = true }
uv-python = { workspace = true }
uv-resolver = { workspace = true }
uv-settings = { workspace = true }
uv-workspace = { workspace = true }
uv-distribution-types = { workspace = true }
uv-pypi-types = { workspace = true }

# GUI framework - GPUI from Zed
gpui = "0.2"

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
tracing = { workspace = true }
url = { workspace = true }
fs-err = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
